@startuml

skinparam linetype ortho

skinparam shadowing false
skinparam roundcorner 8
skinparam monochrome true

skinparam nodesep 80
skinparam ranksep 80
skinparam packagePadding 20

left to right direction

' =========================
' СУЩНОСТИ
' =========================
class Device {
  - id: number
  - name: String
  - vendorId: String
  - productId: String
  - serial: String
  - validTo: Date
}

' =========================
' РЕПОЗИТОРИИ
' =========================
class DeviceRepository
class DBConnection
DeviceRepository --* DBConnection

' =========================
' МЕНЕДЖЕРЫ
' =========================
package "Managers" {
  class DeviceManager
  class PolicyManager {
    +isDeviceAllowed(Device)
  }
}

DeviceManager --* DeviceRepository

DeviceManager ..> Device
PolicyManager ..> Device

' =========================
' ФАСАД
' =========================
class Facade {
  +execute(command)
}

Facade o-- DeviceManager

' =========================
' КОМАНДЫ
' =========================
package "Commands" {
  class Command {
    +execute()
  }
  class GetWhiteListDeviceCommand
  class AddDeviceToWhiteListCommand
  class DeleteDeviceFromWhiteListCommand
  class PatchValidToDeivceCommand
  class GetCurrentConnectedDevicesCommand
}

Facade ..> Command

Command <|-- GetWhiteListDeviceCommand
Command <|-- AddDeviceToWhiteListCommand
Command <|-- DeleteDeviceFromWhiteListCommand
Command <|-- PatchValidToDeivceCommand
Command <|-- GetCurrentConnectedDevicesCommand

GetCurrentConnectedDevicesCommand ..> Device
PatchValidToDeivceCommand --> Device
AddDeviceToWhiteListCommand --> Device
GetWhiteListDeviceCommand ..> Device

' =========================
' WATCHERS
' =========================
package "Watchers" {
interface Watcher {
    +start()
}

class MountWatcher
}

Watcher <|-- MountWatcher

' =========================
' ОЧЕРЕДЬ
' =========================
class EventQueue {
    +push(event)
    +pop(event)
}

class EventLoop {
    +run()
}

EventLoop --> EventQueue

class DeviceControlService {
    +handleEvent(event)
}

EventLoop --> DeviceControlService

DeviceControlService --> DeviceManager
DeviceControlService --> PolicyManager

MountWatcher --> EventQueue
FanotifyWatcher --> EventQueue

@enduml